<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginEnd="35dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/sw_relayedit_starttime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/start_time"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <Button
                    android:id="@+id/btn_relayedit_starttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/normalbtn_theme_pressstate"
                    android:enabled="false"
                    android:text="@string/set_start_time"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_realyedit_ontime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/on_duration"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_relayedit_offtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/off_duration"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_relayedit_ontime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normalbtn_theme_pressstate"
                android:text="@string/set_on_time"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_relayedit_offtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normalbtn_theme_pressstate"
                android:text="@string/set_off_time"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/sw_realyedit_endtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/end_time"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <Button
                    android:id="@+id/btn_relayedit_endtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/normalbtn_theme_pressstate"
                    android:enabled="false"
                    android:text="@string/set_end_time"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_relayedit_days"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_sat"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:checked="true"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textOff="S"
                    android:textOn="S"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_sun"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:checked="true"
                    android:textColor="#FFFFFF"
                    android:textOff="S"
                    android:textOn="S"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_mon"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:checked="true"
                    android:textColor="#FFFFFF"
                    android:textOff="M"
                    android:textOn="M"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_tue"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:checked="true"
                    android:textColor="#FFFFFF"
                    android:textOff="T"
                    android:textOn="T"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_web"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:checked="true"
                    android:textColor="#FFFFFF"
                    android:textOff="W"
                    android:textOn="W"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_thu"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:textColor="#FFFFFF"
                    android:textOff="T"
                    android:textOn="T"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/time_fri"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:background="@drawable/circularbtn_theme_pressesstate"
                    android:textColor="#FFFFFF"
                    android:textOff="F"
                    android:textOn="F"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:text="S" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>